Fix privacy notice checkbox error in newletter form not showing
- fixes #3042

--- a/frontend/src/app/components/NewsletterForm/index.scss
+++ b/frontend/src/app/components/NewsletterForm/index.scss
@@ -70,6 +70,26 @@
     }
   }
 
+  .error-msg {
+      background: $red-70;
+      border-radius: 2px;
+      color: white;
+      left: 0;
+      padding: 5px;
+      position: absolute;
+      top: -35px;
+
+      &::after {
+          bottom: -15px;
+          color: $red-70;
+          content: '\25bc';
+          font-size: 20px;
+          left: -8px;
+          padding-left: 0.5em;
+          position: absolute;
+      }
+  }
+
   label {
     font-size: $font-unit;
     line-height: 20px;
